; ModuleID = '/home/carl/AnghaBench/libevent/test/extr_regress_ssl.c_BIO_s_rwcount.c'
source_filename = "/home/carl/AnghaBench/libevent/test/extr_regress_ssl.c_BIO_s_rwcount.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@methods_rwcount = common dso_local global i32* null, align 8
@BIO_TYPE_LIBEVENT_RWCOUNT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"rwcount\00", align 1
@bio_rwcount_write = common dso_local global i32 0, align 4
@bio_rwcount_read = common dso_local global i32 0, align 4
@bio_rwcount_puts = common dso_local global i32 0, align 4
@bio_rwcount_ctrl = common dso_local global i32 0, align 4
@bio_rwcount_new = common dso_local global i32 0, align 4
@bio_rwcount_free = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @BIO_s_rwcount to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @BIO_s_rwcount() #0 {
  %1 = alloca i32*, align 8
  %2 = load i32*, i32** @methods_rwcount, align 8
  %3 = icmp eq i32* %2, null
  br i1 %3, label %4, label %29

4:                                                ; preds = %0
  %5 = load i32, i32* @BIO_TYPE_LIBEVENT_RWCOUNT, align 4
  %6 = call i32* @BIO_meth_new(i32 %5, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  store i32* %6, i32** @methods_rwcount, align 8
  %7 = load i32*, i32** @methods_rwcount, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %4
  store i32* null, i32** %1, align 8
  br label %31

10:                                               ; preds = %4
  %11 = load i32*, i32** @methods_rwcount, align 8
  %12 = load i32, i32* @bio_rwcount_write, align 4
  %13 = call i32 @BIO_meth_set_write(i32* %11, i32 %12)
  %14 = load i32*, i32** @methods_rwcount, align 8
  %15 = load i32, i32* @bio_rwcount_read, align 4
  %16 = call i32 @BIO_meth_set_read(i32* %14, i32 %15)
  %17 = load i32*, i32** @methods_rwcount, align 8
  %18 = load i32, i32* @bio_rwcount_puts, align 4
  %19 = call i32 @BIO_meth_set_puts(i32* %17, i32 %18)
  %20 = load i32*, i32** @methods_rwcount, align 8
  %21 = load i32, i32* @bio_rwcount_ctrl, align 4
  %22 = call i32 @BIO_meth_set_ctrl(i32* %20, i32 %21)
  %23 = load i32*, i32** @methods_rwcount, align 8
  %24 = load i32, i32* @bio_rwcount_new, align 4
  %25 = call i32 @BIO_meth_set_create(i32* %23, i32 %24)
  %26 = load i32*, i32** @methods_rwcount, align 8
  %27 = load i32, i32* @bio_rwcount_free, align 4
  %28 = call i32 @BIO_meth_set_destroy(i32* %26, i32 %27)
  br label %29

29:                                               ; preds = %10, %0
  %30 = load i32*, i32** @methods_rwcount, align 8
  store i32* %30, i32** %1, align 8
  br label %31

31:                                               ; preds = %29, %9
  %32 = load i32*, i32** %1, align 8
  ret i32* %32
}

declare dso_local i32* @BIO_meth_new(i32, i8*) #1

declare dso_local i32 @BIO_meth_set_write(i32*, i32) #1

declare dso_local i32 @BIO_meth_set_read(i32*, i32) #1

declare dso_local i32 @BIO_meth_set_puts(i32*, i32) #1

declare dso_local i32 @BIO_meth_set_ctrl(i32*, i32) #1

declare dso_local i32 @BIO_meth_set_create(i32*, i32) #1

declare dso_local i32 @BIO_meth_set_destroy(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
